fix: apply overflow only to chat-footer-details

--- a/src/vs/workbench/contrib/chat/browser/widget/media/chat.css
+++ b/src/vs/workbench/contrib/chat/browser/widget/media/chat.css
@@ -221,6 +221,9 @@
 	visibility: hidden;
 	padding-top: 6px;
 	height: 22px;
+}
+
+.interactive-item-container.interactive-response:not(.chat-response-loading) .chat-footer-toolbar .chat-footer-details {
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
